--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Netflix </title>
-    <link rel="stylesheet" href="main.css"/>
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/main.css"/>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <!-- navbar -->
     <div class="nav">
       <div class="nav__left">
-        <img class="nav_logo" src="logo.svg" alt="">
+        <img class="nav_logo" src="img/logo.svg" alt="">
       </div>
       <div class="nav__right">
-        <img src="avatar.png" class="nav_avatar" alt="">
+        <img src="avatar.png" class="img/nav_avatar" alt="">
       </div>
     </div>
 
