--- a/index.html
+++ b/index.html
@@ -2,27 +2,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/style.css"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Netflix </title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css"/>
     <script src="js/app.js"></script>
   </head>
   <body>
     <!-- navbar -->
     <div class="nav">
       <div class="nav__left">
+        <p class="toggle-menu"><i class="fa-solid fa-bars"></i></p>
         <img class="nav_logo" src="img/logo.svg" alt="">
+        <ul class="nav-links">
+          <li class="show"><a href="#" id="link_active">Home</a></li>
+          <li class="show"><a href="#">TV Shows</a></li>
+          <li class="show"><a href="#">Movies</a></li>
+          <li class="show"><a href="#">New & Popular</a></li>
+          <li class="show"><a href="#">My List</a></li>
+          <li class="show"><a href="#">Browse By Languages</a></li>
+          <li class="hidden"><a href="#">Browse</a></li>
+          <li class="hidden"><a href="#">Children</a></li>
+        </ul>
       </div>
       <div class="nav__right">
-        <img src="avatar.png" class="img/nav_avatar" alt="">
+        <ul class="nav-options">
+          <li class="show"><i class="fa-solid fa-magnifying-glass"></i></li>
+          <li class="show">Children</li>
+          <li class="show"><i class="fa-regular fa-bell"></i></li>
+          <li class="hidden-input"><input type="search" placeholder="search"></li>
+        </ul>
+        <img src="img/avatar.png" class="nav_avatar" alt="">
+        <div class="carrot"></div>
       </div>
     </div>
 
     <!-- banner -->
     <header id="banner">
+      <div class="banner-volume-parent">
+        <p class="banner_volume" onclick="volumeControl()">
+          <i class="fa-solid fa-volume-high"></i>
+        </p>
+        <p>U/A 16+</p>
+      </div>
       <div id="banner__contents">
         <h1 id="banner__title"></h1>
         <div id="banner__buttons">
